<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="399dp"
        android:layout_height="267dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        android:contentDescription="@null"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_textUser"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_textPassword"
        android:inputType="textPassword"/>

    <!-- NUEVO: Recordarme -->
    <CheckBox
        android:id="@+id/chkRemember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_rememberMe"
        android:layout_marginTop="10dp"/>

    <!-- NUEVO: Olvidé mi contraseña -->
    <TextView
        android:id="@+id/tvOlvidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_textForgotPassword"
        android:textColor="@color/purple_500"
        android:layout_gravity="end"
        android:padding="8dp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"/>

    <Button
        android:id="@+id/btnSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnSign"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnRegister"
        android:layout_marginTop="10dp"/>
</LinearLayout>