<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_forgot_title"
    android:textSize="24sp"
    android:textStyle="bold"
    android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edtEmailForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_forgot_hint_email"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/btnSendRecovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_forgot_btn_send"
        android:layout_marginTop="20dp"/>
</LinearLayout>