<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Crear Cuenta"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/edtNombreRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre Completo"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_CreateUser"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_CreatePassword"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnCreate"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnVolverLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btnBackToLogin"
        android:layout_marginTop="20dp"/>

</LinearLayout>